--- a/index.html
+++ b/index.html
@@ -6,10 +6,41 @@
   <title>Simon game</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Simon game</h1>
+  <h3 class="game-name">Simon Game</h3>
+  <div class="container">
+    <h1 class="heading">Press key A to start game</h1>
+  </div>
+
+  <div class="container button-container">
+    <div class="row">
+      <div class="col-lg-6">
+        <button type="button" id="green" class="btn btn-lg btn-dark"></button>
+      </div>
+      <div class="col-lg-6">
+        <button type="button" id="red" class="btn btn-lg btn-dark"></button>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col-lg-6">
+        <button type="button"  id="yellow" class="btn btn-lg btn-dark"></button>
+      </div>
+      <div class="col-lg-6">
+        <button type="button" id="blue" class="btn btn-lg btn-dark"></button>
+      </div>
+
+    </div>
+  </div>
+
+
+
+
+
   <script src="game.js" charset="utf-8"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
