Add click event and some styles

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
   <div class="container button-container">
     <div class="row">
+
       <div class="col-lg-6">
-        <button type="button" id="green" class="btn btn-lg btn-dark"></button>
+        <button type="button" id="green" class="btx btn btn-lg btn-dark"></button>
       </div>
       <div class="col-lg-6">
         <button type="button" id="red" class="btn btn-lg btn-dark"></button>
@@ -28,7 +29,7 @@
     </div>
     <div class="row">
       <div class="col-lg-6">
-        <button type="button"  id="yellow" class="btn btn-lg btn-dark"></button>
+        <button type="button" id="yellow" class="btn btn-lg btn-dark"></button>
       </div>
       <div class="col-lg-6">
         <button type="button" id="blue" class="btn btn-lg btn-dark"></button>
@@ -38,12 +39,9 @@
   </div>
 
 
-
-
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="game.js" charset="utf-8"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 </body>
 
