Add animation and some changes

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <div class="row">
 
       <div class="col-lg-6">
-        <button type="button" id="green" class="btx btn btn-lg btn-dark"></button>
+        <button type="button" id="green" class="green"></button>
       </div>
       <div class="col-lg-6">
-        <button type="button" id="red" class="btn btn-lg btn-dark"></button>
+        <button type="button" id="red" class="red"></button>
       </div>
 
     </div>
     <div class="row">
       <div class="col-lg-6">
-        <button type="button" id="yellow" class="btn btn-lg btn-dark"></button>
+        <button type="button" id="yellow" class="yellow"></button>
       </div>
       <div class="col-lg-6">
-        <button type="button" id="blue" class="btn btn-lg btn-dark"></button>
+        <button type="button" id="blue" class="blue"></button>
       </div>
 
     </div>
