--- a/index.html
+++ b/index.html
@@ -4,28 +4,27 @@
 <head>
   <meta charset="utf-8">
   <title>Simon game</title>
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
-
+   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h3 class="game-name">Simon Game</h3>
   <div class="container">
+    <h3 class="game-name">Simon Game</h3>
     <h1 class="heading">Press key A to start game</h1>
   </div>
 
   <div class="container button-container">
     <div class="row">
-
       <div class="col-lg-6">
         <button type="button" id="green" class="green"></button>
       </div>
       <div class="col-lg-6">
         <button type="button" id="red" class="red"></button>
       </div>
-
     </div>
     <div class="row">
       <div class="col-lg-6">
@@ -34,10 +33,8 @@
       <div class="col-lg-6">
         <button type="button" id="blue" class="blue"></button>
       </div>
-
     </div>
   </div>
-
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="game.js" charset="utf-8"></script>
